--- a/environments/staging/environment.yaml
+++ b/environments/staging/environment.yaml
@@ -20,7 +20,7 @@ app:
   resources:
     # max cpu. memory limit is based on cpu value: 1:3 memory ratio, e.g. 1 cpu == 3 gb
     cpu: 1
-
+  java: 17
   # List of environment variables that are set for the application
   env:
     - name: JVM_ARGS 
