--- a/environments/production/environment.yaml
+++ b/environments/production/environment.yaml
@@ -12,7 +12,7 @@ app:
   maven:
     groupId: net.wasdev.wlp.sample
     artifactId: ferret
-    version: 1.2
+    version: "1.1"
     type: war
 
   # Set minimum and maximum number of instances of the application. 
