--- a/environments/staging/environment.yaml
+++ b/environments/staging/environment.yaml
@@ -84,3 +84,4 @@ app:
   #- crn: crn:v1:bluemix:public:dashdb-for-transactions:us-east:a/123:456::
   #- name: "my Db2 instance"
   #  type: db2
+  # dummy commit
