--- a/environments/staging/environment.yaml
+++ b/environments/staging/environment.yaml
@@ -11,7 +11,7 @@ app:
   # comment
   # Set the Maven coordinates of the Maven artifact to deploy for the 
   # "Deploy, and run" scenario.
-  # maven:
+  maven:
   #   groupId: net.wasdev.wlp.sample
   #   artifactId: ferret
   #   version: "1.2"
