--- a/environments/staging/environment.yaml
+++ b/environments/staging/environment.yaml
@@ -14,7 +14,7 @@ app:
   maven:
     groupId: "net.wasdev.wlp.sample"
     artifactId: "ferret"
-    version: "1.2"
+    version: ""
     type: "war"
     
   # version: ""
